--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -62,14 +62,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parse the date\n",
+    "\n",
     "data['Year/Month/Day'] = pd.to_datetime(data['Year/Month/Day'])\n",
     "\n",
-    "# Extract additional time-based features\n",
+    "\n",
     "data['Day_of_Week'] = data['Year/Month/Day'].dt.dayofweek\n",
     "data['Month'] = data['Year/Month/Day'].dt.month\n",
     "\n",
-    "# Load the holiday data\n",
+    "\n",
     "holidays_2022 = [\n",
     "    \"2022-01-01\", \"2022-04-15\", \"2022-04-18\", \"2022-05-23\", \n",
     "    \"2022-07-01\", \"2022-08-01\", \"2022-09-05\", \"2022-09-19\", \n",
@@ -82,11 +82,11 @@
     "    \"2023-10-09\", \"2023-11-11\", \"2023-12-25\", \"2023-12-26\"\n",
     "]\n",
     "\n",
-    "# Convert lists to Pandas Series\n",
+    "\n",
     "holidays_2022 = pd.Series(pd.to_datetime(holidays_2022))\n",
     "holidays_2023 = pd.Series(pd.to_datetime(holidays_2023))\n",
     "\n",
-    "# Concatenate the Series\n",
+    "\n",
     "holidays = pd.concat([holidays_2022, holidays_2023])\n"
    ]
   },
@@ -241,13 +241,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. **Filtering**:\n",
+    "**Filtering**:\n",
     "   - **November 2023**: Removed November 2023 data as it was considered out of trend or potentially noisy. This step was taken to improve the model’s performance by ensuring that the data used for training and forecasting is representative and not distorted by anomalies or seasonal effects specific to that month."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -280,10 +280,7 @@
     "    This function filters out rows corresponding to November 2023\n",
     "    based on the 'Year/Month/Day' column.\n",
     "    \"\"\"\n",
-    "    # Extract year and month\n",
     "    \n",
-    "\n",
-    "    # Filter out November 2023\n",
     "    filtered_data = data[~((data['Year'] == 2023) & (data['Month'] == 11))]\n",
     "\n",
     "    return filtered_data\n",
@@ -294,12 +291,12 @@
     "    \"\"\"\n",
     "    plt.figure(figsize=(14, 8))\n",
     "\n",
-    "    # Ensure 'Month' and 'Year' columns are available\n",
+    "    \n",
     "    if 'Month' in data.columns and 'Year' in data.columns:\n",
-    "        # Create a datetime column for accurate sorting\n",
+    "        \n",
     "        data['Date'] = pd.to_datetime(data[['Year', 'Month']].assign(DAY=1))\n",
     "        \n",
-    "        # Sort the data by the datetime column\n",
+    "       \n",
     "        data = data.sort_values(by='Date')\n",
     "    else:\n",
     "        print(\"Error: 'Month' and 'Year' columns are missing\")\n",
@@ -313,7 +310,7 @@
     "        \n",
     "        plt.plot(grouped.index, grouped.values, label=label)\n",
     "\n",
-    "    # Customizing the plot\n",
+    " \n",
     "    plt.xlabel('Date')\n",
     "    plt.ylabel('# Boardings')\n",
     "    plt.title(f'Boardings Over Time by Time of Day {title_suffix}')\n",
@@ -321,16 +318,16 @@
     "    plt.legend(title='Time of Day')\n",
     "    plt.tight_layout()\n",
     "\n",
-    "    # Show the plot\n",
+    "  \n",
     "    plt.show()\n",
     "\n",
-    "# Plot with the original data (including November 2023)\n",
+    "\n",
     "plot_boardings_over_time(data, \"(Including November 2023)\")\n",
     "\n",
-    "# Filter out November 2023\n",
+    "\n",
     "filtered_data = filter_november_2023(data)\n",
     "\n",
-    "# Plot with the filtered data (excluding November 2023)\n",
+    "\n",
     "plot_boardings_over_time(filtered_data, \"(Excluding November 2023)\")\n"
    ]
   },
@@ -429,7 +426,7 @@
     }
    ],
    "source": [
-    "# Aggregate the filtered data at a daily level and apply EMA smoothing\n",
+    "\n",
     "daily_filtered_data = filtered_data.groupby(['Year/Month/Day', 'Time of Day'])['# Boardings'].sum().reset_index()\n",
     "daily_filtered_data.rename(columns={'Year/Month/Day': 'Date'}, inplace=True)\n",
     "daily_filtered_data.set_index('Date', inplace=True)\n",
